SearchOverlay: Fix position of the 'clear' button
Before c0f08790ea60699590be30caac3e59faab307052, this was defined as
`( @iconSize / 2 ) + @headerVerticalPadding`, which computed to 0.9em.
Restore the old value since it looks wrong now: T215426#5486117.

--- a/skinStyles/mobile.startup/search/SearchOverlay.less
+++ b/skinStyles/mobile.startup/search/SearchOverlay.less
@@ -15,7 +15,7 @@
 
 	.clear {
 		position: absolute;
-		top: 1em;
+		top: 0.9em;
 		right: 0;
 	}
 }
